tests/baselines/reference/decoratorReferenceOnOtherProperty(strict=true).errors.txt
index.ts(6,8): error TS7006: Parameter 'yoha' implicitly has an 'any' type.
index2.ts(6,8): error TS7006: Parameter 'yoha' implicitly has an 'any' type.


==== yoha.ts (0 errors) ====
    export class Yoha {}
    
==== index.ts (1 errors) ====
    import {Yoha} from './yoha';
    
    function foo(...args: any[]) {}
    
    class Bar {
      yoha(@foo yoha, bar: Yoha) {}
           ~~~~~~~~~
!!! error TS7006: Parameter 'yoha' implicitly has an 'any' type.
      //                   ^^^^
    }
    
==== index2.ts (1 errors) ====
    import {Yoha} from './yoha';
    
    function foo(...args: any[]) {}
    
    class Bar {
      yoha(@foo yoha, ...bar: Yoha[]) {}
           ~~~~~~~~~
!!! error TS7006: Parameter 'yoha' implicitly has an 'any' type.
      //                      ^^^^
    }